# KUR__6

./: .gitignore  pyproject.toml  readme.md
blog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py
config/: settings.py  urls.py
fixture/: blog_data.json  service_customer_data.json  users_data.json
rz/: admin.py  models.py  models1.py  urls.py  views.py
service_customer/: admin.py  apps.py  forms.py  models.py  services.py  services_new.py  services_old.py  tasks.py  urls.py  views.py
service_customer/managment/: start_mailing.py
service_customer/migrations/: 0001_initial.py  0002_alter_mailing_active.py  0002_alter_message_body_alter_message_subject.py  0002_initial.py  0003_alter_mailing_active.py  0003_alter_message_options_alter_message_body_and_more.py  0004_alter_client_options_alter_client_comment_and_more.py  0004_alter_mailing_active.py  0005_alter_client_comment.py  0005_alter_mailing_active.py  0006_alter_mailing_active.py  0006_alter_mailing_start_date_alter_mailing_status.py  0007_alter_mailing_active.py  0007_alter_mailing_options.py  0008_alter_mailing_clients.py  0008_alter_mailing_periodicity.py  0009_alter_mailing_periodicity.py  0010_alter_mailing_periodicity.py  0010_alter_message_subject.py  0011_alter_mailing_message.py  0011_alter_mailing_periodicity.py  0012_alter_mailing_periodicity.py  0012_alter_mailingattempt_options_alter_mailing_clients_and_more.py  0013_alter_mailing_periodicity.py  (+1 more)
static/css/: bootstrap.min.css
users/: forms.py  models.py  urls.py  views.py
(+32 files in other folders)
